--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="navigation__link" href="#reviews">отзывы</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#footer">Контакты</a>
+            <a class="navigation__link" href="#contact">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -39,11 +39,21 @@
 
   <main class="main">
     <section class="section banner">
-      <div class="container">
+      <div class="container banner__container">
         <div class="banner__content">
           <h1 class="banner__title">GAME OVER</h1>
           <span class="banner__tagline">Новый формат игр и отдыха</span>
         </div>
+        <ul class="banner__list">
+          <li class="banner__item">
+            <p class="banner__subtitle banner__subtitle_4">4</p>
+            <p class="banner__text">Тематических зала</p>
+          </li>
+          <li class="banner__item">
+            <p class="banner__subtitle banner__subtitle_new">new</p>
+            <p class="banner__text">Новейшая аппаратура</p>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -216,33 +226,39 @@
       <div class="container">
         <h2 class="subtitle about__title" id="about">О нас</h2>
 
-        <img class="about__photos" src="img/about-photos.jpg" alt="Коллаж из фотографий мероприятий">
+        <div class="about__content">
+          <img class="about__photos" src="img/about-photos.jpg" alt="Коллаж из фотографий мероприятий">
 
-        <div class="about__info">
-          <div class="about__paragraph">
-            <p class="about__text">
-              Для наших гостей мы создали концептуально новое игровое пространство виртуальной реальности в центральной
-              части города.
-            </p>
-            <p class="about__text">
-              Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми
-              разработками со всего мира.
-            </p>
+          <div class="about__article">
+            <div class="about__info">
+              <div class="about__paragraph">
+                <p class="about__text">
+                  Для наших гостей мы создали концептуально новое игровое пространство виртуальной реальности в
+                  центральной
+                  части города.
+                </p>
+                <p class="about__text">
+                  Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми
+                  игровыми
+                  разработками со всего мира.
+                </p>
+              </div>
+
+              <blockquote class="about__quote">
+                <p class="about__text about__quote-text">
+                  GAME OVER &mdash; это место незабываемых впечатлений
+                </p>
+                <figure class="about__figure">
+                  <img class="about__img" src="img/arkadiy.png" alt="Фотография Аркадия Абакшина">
+                  <figcaption class="about__figcaption">
+                    <cite class="about__author">
+                      Аркадий Абакшин, создатель игровой территории GAME OVER
+                    </cite>
+                  </figcaption>
+                </figure>
+              </blockquote>
+            </div>
           </div>
-
-          <blockquote class="about__quote">
-            <p class="about__text about__quote-text">
-              GAME OVER &mdash; это место незабываемых впечатлений
-            </p>
-            <figure class="about__figure">
-              <img class="about__img" src="img/arkadiy.png" alt="Фотография Аркадия Абакшина">
-              <figcaption class="about__figcaption">
-                <cite class="about__author">
-                  Аркадий Абакшин, создатель игровой территории GAME OVER
-                </cite>
-              </figcaption>
-            </figure>
-          </blockquote>
         </div>
       </div>
     </section>
@@ -301,47 +317,63 @@
         </ul>
       </div>
     </section>
+
+    <section class="section contact">
+      <div class="container">
+        <h2 class="subtitle contact__title" id="contact">Контакты</h2>
+
+        <div class="contact__content">
+          <div class="contact__all-contacts">
+            <ul class="contact__list">
+              <li class="contact__item contact__address">
+                <div>г. Москва</div>
+                <div>ул. Аквамарина, 16</div>
+              </li>
+              <li class="contact__item contact__phone">
+                <a class="contact__link" href="tel:89509302893">8 (950) 930 - 28 - 93</a>
+              </li>
+              <li class="contact__item contact__email">
+                <a class="contact__link" href="mailto:gameover@gmail.com">GameOver@gmail.com</a>
+              </li>
+            </ul>
+
+            <ul class="contact__social">
+              <li class="contact__media">
+                <a href="#">
+                  <img src="img/vk.svg" alt="Иконка ВКонтакте">
+                </a>
+              </li>
+              <li class="contact__media">
+                <a href="#">
+                  <img src="img/telegram.svg" alt="Икока Telegram">
+                </a>
+              </li>
+              <li class="contact__media">
+                <a href="#">
+                  <img src="img/pinterest.svg" alt="Иконка Pinterest">
+                </a>
+              </li>
+              <li class="contact__media">
+                <a href="#">
+                  <img src="img/su.svg" alt="Иконка StumbleUpon">
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <img class="contact__map" src="img/map.jpg" alt="Местонахождение компании на карте">
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="section footer">
-    <div class="container">
-      <h2 class="subtitle footer__title" id="contacts">Контакты</h2>
-
-      <ul class="footer__list">
-        <li class="footer__item footer__address">
-          <div>г. Москва</div>
-          <div>ул. Аквамарина, 16</div>
-        </li>
-        <li class="footer__item footer__phone">
-          <a class="footer__link" href="tel:89509302893">8 (950) 930 - 28 - 93</a>
-        </li>
-        <li class="footer__item footer__email">
-          <a class="footer__link" href="mailto:gameover@gmail.com">GameOver@gmail.com</a>
-        </li>
-      </ul>
-
-      <ul class="footer__social">
-        <li class="footer__media">
-          <a href="#">
-            <img src="img/vk.svg" alt="Иконка ВКонтакте">
-          </a>
-        </li>
-        <li class="footer__media">
-          <a href="#">
-            <img src="img/telegram.svg" alt="Икока Telegram">
-          </a>
-        </li>
-        <li class="footer__media">
-          <a href="#">
-            <img src="img/pinterest.svg" alt="Иконка Pinterest">
-          </a>
-        </li>
-        <li class="footer__media">
-          <a href="#">
-            <img src="img/su.svg" alt="Иконка StumbleUpon">
-          </a>
-        </li>
-      </ul>
+    <div class="container footer__container">
+      <p class="footer__copyright">© Game Over, 2022</p>
+      <div class="footer__author">
+        <p class="footer__design">Design by Anastasia Ilina</p>
+        <a class="footer__link" href="mailto:ilina9825@gmail.com">ilina9825@gmail.com</a>
+      </div>
     </div>
   </footer>
 </body>
