banner+header+reviews+subtitle fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
       </nav>
 
-      <button class="header__button">Заказать звонок</button>
+      <button class="button header__button">Заказать звонок</button>
     </div>
   </header>
 
@@ -54,6 +54,10 @@
             <p class="banner__text">Новейшая аппаратура</p>
           </li>
         </ul>
+
+        <button class="button banner__button">Забронировать</button>
+
+        <button class="banner__next"></button>
       </div>
     </section>
 
