--- a/index.html
+++ b/index.html
@@ -354,22 +354,22 @@
 
             <ul class="contact__social">
               <li class="contact__media">
-                <a href="#">
+                <a class="contact__link" href="#">
                   <img src="img/vk.svg" alt="Иконка ВКонтакте">
                 </a>
               </li>
               <li class="contact__media">
-                <a href="#">
+                <a class="contact__link" href="#">
                   <img src="img/telegram.svg" alt="Икока Telegram">
                 </a>
               </li>
               <li class="contact__media">
-                <a href="#">
+                <a class="contact__link" href="#">
                   <img src="img/pinterest.svg" alt="Иконка Pinterest">
                 </a>
               </li>
               <li class="contact__media">
-                <a href="#">
+                <a class="contact__link" href="#">
                   <img src="img/su.svg" alt="Иконка StumbleUpon">
                 </a>
               </li>
