--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
         <ul class="reviews__list">
           <li class="reviews__item">
             <div class="reviews__author">
-              <img class="reviews__photo" src="img/maks-samoilov.png" alt="Фотография Макса Самойлова">
+              <div class="reviews__photo">
+                <img class="reviews__image" src="img/maks-samoilov.png" alt="Фотография Макса Самойлова">
+              </div>
               <div class="reviews__name">Макс Самойлов</div>
             </div>
             <p class="reviews__review-text">
@@ -296,7 +298,9 @@
 
           <li class="reviews__item">
             <div class="reviews__author">
-              <img class="reviews__photo" src="img/oksana-grigorieva.png" alt="Фотография Оксаны Григорьевой">
+              <div class="reviews__photo">
+                <img class="reviews__image" src="img/oksana-grigorieva.png" alt="Фотография Оксаны Григорьевой">
+              </div>
               <div class="reviews__name">Оксана Григорьева</div>
             </div>
             <p class="reviews__review-text">
@@ -307,7 +311,9 @@
 
           <li class="reviews__item">
             <div class="reviews__author">
-              <img class="reviews__photo" src="img/nikita-yaschenko.png" alt="Фотография Никиты Ященко">
+              <div class="reviews__photo">
+                <img class="reviews__image" src="img/nikita-yaschenko.png" alt="Фотография Никиты Ященко">
+              </div>
               <div class="reviews__name">Никита Ященко</div>
             </div>
             <p class="reviews__review-text">
